--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <img src="eashan.jpg" alt="Eashan Reddy Goli" class="center-image">
+
     <title>Rubik's Cube Timer with PLL Selector</title>
     <style>
         body {
